--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -28,27 +28,51 @@ button,
 select,
 optgroup,
 textarea {
-	margin: 0;
 	font-family: inherit;
 	font-size: inherit;
 	line-height: inherit;
 }
 
-input {
+
+input,
+select,
+optgroup,
+textarea{
+	margin: 0 0 0.5rem 0;
 	padding: 0.5rem 0.2rem;
 	border: 1px solid var(--input-border-color);
 	border-radius: var(--mdc-shape-medium, 4px);
 }
 
-input:focus {
+input:focus,
+select:focus,
+textarea:focus{
 	border-color: var(--mdc-theme-primary);
 	border-width: 2px;
 }
 
-input:invalid {
+input:invalid,
+select:invalid,
+textarea:invalid {
 	outline: none;
 	box-shadow: none;
 }
+
+select {
+
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+	background-repeat: no-repeat, repeat;
+	/* arrow icon position (1em from the right, 50% vertical)*/
+	background-position: right 1rem top 50%;
+	/* icon size */
+	background-size: .65rem auto;
+	/* reserve the space on the right for the arrow */
+	padding-right: 2rem;
+}
+
 label {
   display: inline-block;
   margin-bottom: 0.5rem;
@@ -56,4 +80,34 @@ label {
 
 a {
 	color: var(--mdc-theme-primary);
+}
+h1, .h1 {
+	font-size: 3rem;
+	font-weight: 300;
+}
+h2, .h2{
+	font-size: 2rem;
+	font-weight: 300;
+}
+h3, .h3 {
+	font-size:1.5rem ;
+	font-weight: 300;
+}
+h4, .h4 {
+	font-size:1rem ;
+	font-weight: 700;
+}
+h5, .h5 {
+	font-size: 0.875rem;
+	font-weight: 700;
+}
+h6, .h6 {
+	font-size: 0.75rem;
+	font-weight: 700;
+}
+.align-center {
+	text-align: center;
+}
+.align-right {
+	text-align: right;
 }
