--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -15,17 +15,60 @@
 	--mdc-theme-on-secondary: #fff;
 	--mdc-theme-on-surface: #000;
 	--mdc-theme-on-error: #fff;
+	/* top app bar title is the same as h1 */
+	--mdc-typography-headline6-font-size: 3rem;
+	--mdc-typography-headline6-line-height: calc( 3rem * 1.15);
+	--mdc-typography-headline6-font-weight: 300;
+	/* end top app bar title */
+}
+
+
+.clear {
+	display: block;
+	clear: both;
+}
+.spacer {
+	height: 1rem;
+	display: block;
+	clear: both;
+}
+
+.divider {
+	height: 0;
+	margin: 0;
+	border: none;
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: rgba(0, 0, 0, 0.12);
 }
 
 .mdc-top-app-bar {
 	position:static;
+}
+.mdc-top-app-bar__row {
+	height: 6rem;
+}
+.mdc-top-app-bar .mdc-top-app-bar__action-item,
+.mdc-top-app-bar .mdc-top-app-bar__navigation-icon {
+	font-size: 2rem;
+	width: 4rem;
+	height: 4rem;
+}
+a.mdc-top-app-bar__action-item,
+a.mdc-top-app-bar__navigation-icon {
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+}
+.mdc-top-app-bar button {
+	margin: 0;
 }
 .partage-auth {
 	width: 400px;
 	max-width: 400px;
 	display: flex;
 	flex-flow: column;
-	margin: 100px auto 0 auto;
+	margin: 0 auto;
 	align-items: center;
 }
 .partage-auth-form{
@@ -33,9 +76,7 @@
 	padding: 2rem 1rem;
 	margin-bottom: 3rem;
 }
-.partage-auth-form input {
-	margin-bottom: 0.5rem;
-}
+
 .partage-auth-invite {
 	width: 100%;
 	padding: 1rem;
@@ -47,7 +88,7 @@
 }
 .partage-auth-button-box {
 	width: auto;
-	margin: 1.5rem auto 0 auto;
+	margin:0 auto;
 }
 
 .label-inline-block {
@@ -74,6 +115,20 @@
 	color: var(--mdc-theme-error);
 }
 
+.input-group-column {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 2rem;
+}
+.input-group-row {
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 2rem;
+	justify-content: space-between;
+}
+/*
+ *  Starter page
+ */
 .starter-box {
 	display: flex;
 	flex-direction: column;
@@ -106,15 +161,23 @@
 	display: flex;
 	flex-direction: column;
 	padding-top: 4rem;
+	padding-bottom: 4rem;
 }
 
 /*
  * Common list css
  */
+.content-column {
+	width: 900px;
+	max-width: 100%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+}
 .list-item {
 	display: flex;
 	align-items: center;
-	margin: 1rem;
+	margin: 0.5rem 0;
 	background-color: #ffffff;
 	padding: 1rem;
 }
@@ -127,9 +190,15 @@ a.list-item {
 	flex-direction: column;
 	flex-grow: 1;
 }
+.list-item-currency {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 0;
+	align-items: flex-end;
+}
 .list-item-title {
 	font-weight: 700;
-	margin-bottom: 1rem;
+	margin-bottom: 0.5rem;
 }
 .list-item-info {
 	font-style: italic;
@@ -139,3 +208,105 @@ a.list-item {
 .list-item-action:not(:last-child) {
 	margin-right: 0.5rem;
 }
+
+.list-condensed {
+	background-color: #fff;
+	border: 1px solid var(--input-border-color);
+	border-radius: var(--mdc-shape-medium);
+	padding: 0;
+}
+
+.list-condensed-item-content {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	flex-grow: 1;
+}
+
+.list-condensed-button {
+	margin: 0;
+}
+
+.participants-group-label {
+	font-size: 1.5rem;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+}
+.person-choice-label {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	display: block;
+	text-align: center;
+	font-size: 3rem;
+}
+.participant-add-button-box {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	display: block;
+	text-align: center;
+}
+
+/*
+ * Board details
+ */
+
+.board-description {
+	display: block;
+	text-align: center;
+	margin-bottom: 4rem ;
+}
+.board-details-chart {
+	width: 100%;
+	height: 300px;
+	margin-bottom: 4rem ;
+}
+/*
+ * Board balance
+ */
+.balance-label {
+	display: block;
+	text-align: center;
+}
+
+.balance-table {
+	width: 100%;
+	border-collapse: collapse;
+	border: 1px solid var(--input-border-color);
+}
+.balance-table thead {
+	background-color: #dddddd;
+}
+.balance-table tbody {
+	background-color: #fff;
+}
+
+.balance-table td,
+.balance-table th {
+	text-align: center;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	border: 1px solid var(--input-border-color);
+}
+/*
+ * Bottom spacing
+ */
+.board-balance-chart,
+.balance-table {
+	margin-bottom: 2rem ;
+}
+
+/*
+ * Chart
+ */
+.highcharts-background {
+	fill: transparent;
+}
+/*
+ * Participant list
+ */
+.list-item-participant-title {
+	font-weight: 700;
+}
+
+
